# tech-radar

./: .env-template  .gitignore  README.md  bootstrap.py  cli.py  db_explorer.sh  feedback.py  main.py  pyproject.toml  requirements.txt  retrain.py  runner.sh  simple_run.sh  sqlite_explorer.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  daily-db-refresh.yml
backup/: feeds.json
legacy/: database_notion.csv
outputs/: feeds.json  tech_radar.db
outputs/Tomas Liendro/: log_pipeline.json  opportunities.json
outputs/sebastian_calvera/: feedback.json  feedback_classifier.joblib  founder.json  founder_feed.json  opportunities.json
outputs/tomas_liendro/: feedback.json  feedback_classifier.joblib  founder.json  founder_feed.json  opportunities.json
src/: __init__.py
src/agents/: __init__.py  base_agent.py  enrichment_agent.py  filter_agent.py  learning_agent.py  opportunity_agent.py  scoring_agent.py
src/config/: __init__.py  config.py  config.yaml
src/config/profiles/: tom.json
src/config/profiles/sebastian_calvera/: profile.json
src/config/profiles/tomas_liendro/: filter.yaml
src/database/: __init__.py  database.py  explorer.py  export_db.py  import_db.py  services.py  tools.py
src/ingestion/: __init__.py  rss_ingestion.py
src/pipeline/: daily_pipeline.py
src/templates/: logs.py  outputs.py
src/utils/: __init__.py  ai_tools.py  database.py  formatting.py  logger.py  remove_noise.py  repair_feeds.py  report.py
tests/: regression_config.yaml  test_database.py  test_sqlite_explorer.py  test_tools.py
