[project]
name = "tech-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black==24.3.0",
    "loguru==0.7.2",
    "numpy==1.26.4",
    "openai==1.14.3",
    "pandas==2.2.1",
    "pydantic==2.6.4",
    "pytest==8.1.1",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "feedparser==6.0.12"
]

[project.scripts]
tech-radar = "src.main:cli"

[tool.uv]
package = true
